# TPCCATracker_old

./: CA.cpp  CA_parallel.cpp  CMakeLists.txt  Windows4Root.h  benchmark.cpp  build.csh  convertToBinary.cpp  dataConverter.cpp  display.cpp  makeRelease.sh  readme.txt
QA/: DrawHistos.C  DrawPVQA.C  Eff.C  Pulls.C  PullsAtFP.C  PullsAtPV.C  PullsK0.C  PullsK0Daughters.C  QA.C
QA/.svn/: all-wcprops  entries
QA/.svn/text-base/: DrawPVQA.C.svn-base  Eff.C.svn-base  PullsK0.C.svn-base  PullsK0Daughters.C.svn-base
cmake/: FindRoot.cmake  FindSSE.cmake  FindTBB.cmake  FindVc.cmake
cmake/.svn/: all-wcprops  entries
code/CATracker/: AliHLTArray.h  AliHLTArrayIO.h  AliHLTTPCCADef.h  AliHLTTPCCAGBTracker.cxx  Reconstructor.cpp  Reconstructor.h  tsc.h
code/CATrackerPerformance/: AliHLTTPCCADisplay.cxx  AliHLTTPCCADisplay.h  AliHLTTPCCAGlobalPerformance.cxx  AliHLTTPCCAGlobalPerformance.h  AliHLTTPCCAGlobalSlicesPerformance.cxx  AliHLTTPCCAGlobalSlicesPerformance.h  AliHLTTPCCAMCPoint.cxx  AliHLTTPCCAMCPoint.h  AliHLTTPCCAMCTrack.cxx  AliHLTTPCCAMCTrack.h  AliHLTTPCCAMergerPerformance.cxx  AliHLTTPCCAMergerPerformance.h  AliHLTTPCCAPerformance.cxx  AliHLTTPCCAPerformance.h  AliHLTTPCCASliceLinksPerformance.cxx  AliHLTTPCCASliceLinksPerformance.h  AliHLTTPCCASlicePerformance.cxx  AliHLTTPCCASlicePerformance.h  AliHLTTPCCASlicesLinksPerformance.cxx  AliHLTTPCCASlicesLinksPerformance.h  AliHLTTPCCASlicesPerformance.cxx  AliHLTTPCCASlicesPerformance.h  AliHLTTPCCAStiPerformance.cxx  AliHLTTPCCAStiPerformance.h  AliHLTTPCCATrackPerformanceBase.cxx  AliHLTTPCCATrackPerformanceBase.h  AliHLTTPCCounters.h  AliHLTTPCPerformanceBase.cxx  AliHLTTPCPerformanceBase.h
code/CATrackerPerformance/.svn/: all-wcprops  entries
code/Parallel/: AliHLTTPCCAInputData.cxx  AliHLTTPCCAInputData.h  AliHLTTPCCAInputSettings.cxx  AliHLTTPCCAInputSettings.h  multithread.h  parallel_for_simpleEqNThr.h  parallel_for_simpleHT.h
code/Parallel/.svn/: all-wcprops  entries
code/Parallel/.svn/text-base/: AliHLTTPCCAInputSettings.cxx.svn-base  parallel_for_simple.h.svn-base
tests/: CMakeLists.txt  cyclecounter.h  gridtest.cpp  hitareatest.cpp
tests/.svn/: all-wcprops  entries
tests/.svn/text-base/: arraytest.cpp.svn-base  kalmanfilter.cpp.svn-base  mathtest.cpp.svn-base
